# secon-rust-collector

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
compose/: Vagrantfile  docker-compose.yaml  provision-selinux.sh  secon-rust-collector.Dockerfile
src/: lib.rs  main.rs
src/api/: api_connection_manager.rs  api_error.rs  api_models.rs  api_routes.rs  mod.rs
src/ebpf/: ebpf.rs
src/selinux/: mod.rs  selinux.rs
src/ssh/: ssh.rs
