[package]
name = "secon-rust-collector"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# SSH operations
async-ssh2-tokio = "0.10.0"

# REST alternative
axum = { version = "0.8.6", features = ["ws"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

# Error handling
thiserror = "2.0.17"
anyhow = "1.0.100"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1.18.1", features = ["v4", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }

validator = {  version = "0.20.0", features = ["derive"] }
tower-http = { version = "0.6.6", features = ["full"] }
tower = "0.5.2"

[profile.release]
lto = true
codegen-units = 1